# MatrixCalc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: CI.yml  Cmake.yml
InterfaceMatrix/: CMakeLists.txt  Matrix.h  MatrixInterface.h
MatrixBase/: CMakeLists.txt  Matrix.h  MatrixBase.h  MatrixColumn.h  MatrixRow.h  MatrixSlice.h
Tests/: CMakeLists.txt  Tests_Add_Sub.h  Tests_Creation.h  Tests_Determinant.h  Tests_Elem_by_Elem.h  Tests_Indexes.h  Tests_Multiply.h  Tests_Slices.h  Tests_Transp_Invert.h  help_for_tests.h  tests.cpp
linters/: linters.sh
scripts/linters/: linters.sh
